<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#4D4D4D"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/tvWelcome2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewReg">

        <EditText
            android:id="@+id/tbEmailReg"
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:autofillHints=""
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:textColorHint="#c0c0c0" />

        <EditText
            android:id="@+id/tbPassReg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:textColorHint="#c0c0c0" />
        <EditText
            android:id="@+id/tbPassConfirmReg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/hintPassword2"
            android:inputType="textPassword"
            android:textColorHint="#c0c0c0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <Button
                android:id="@+id/btnRegistReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/rounded_button"
                android:text="@string/btnRegister"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnSignReg"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:textSize="12sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/btnLogin2"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>